--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
   <body>
     <header>
       <nav>
-        <a href="">
-          <img src="./img/logo.svg" alt=" " />
-        </a>
+        <a href=""> WebStudio </a>
 
         <ul>
           <li><a href="">Студия</a></li>
@@ -19,10 +17,121 @@
           <li><a href="">Контакты</a></li>
         </ul>
       </nav>
+
       <ul>
         <li><a href="mailto:info@devstudio">info@devstudio</a></li>
         <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
+
+    <main>
+      <div>
+        <section>
+          <h1>эффективные решения <br />для вашего бизнеса</h1>
+          <form>
+            <button>Заказать услугу..</button>
+          </form>
+        </section>
+      </div>
+
+      <section>
+        <h2>Особенности</h2>
+        <ul>
+          <li>
+            <h3>Внимание к деталям</h3>
+            <p>
+              Идейные соображения, а также начало повседневной работы по
+              формированию позиции.
+            </p>
+          </li>
+          <li>
+            <h3>Пунктуальность</h3>
+            <p>
+              Задача организации, в особенности же рамки и место обучения кадров
+              влечет за собой.
+            </p>
+          </li>
+          <li>
+            <h3>Планирование</h3>
+            <p>
+              Равным образом консультация с широким активом в значительной
+              степени обуславливает.
+            </p>
+          </li>
+          <li>
+            <h3>Современные технологии</h3>
+            <p>
+              Значимость этих проблем настолько очевидна, что реализация
+              плановых заданий.
+            </p>
+          </li>
+        </ul>
+      </section>
+
+      <section>
+        <h2>Чем мы занимаемся</h2>
+        <ul>
+          <li>
+            <img src="./images/sq-box 1.png" alt="desktop" width="370" />
+          </li>
+          <li>
+            <img src="./images/sq-box 2.png" alt="mobile" width="370" />
+          </li>
+          <li>
+            <img src="./images/sq-box 3.png" alt="tablet" width="370" />
+          </li>
+        </ul>
+      </section>
+
+      <section>
+        <h2>Наша команда</h2>
+        <ul>
+          <li>
+            <figure>
+              <img
+                src="./images/sq-staff1.png"
+                alt="Игорь Демьяненко Product Designer"
+                width="270"
+              />
+              <figcaption>Игорь Демьяненко</figcaption>
+              <figcaption>Product Designer</figcaption>
+            </figure>
+          </li>
+          <li>
+            <figure>
+              <img
+                src="./images/sq-staff2.png"
+                alt="Ольга Репина Frontend Developer"
+                width="270"
+              />
+              <figcaption>Ольга Репина</figcaption>
+              <figcaption>Frontend Developer</figcaption>
+            </figure>
+          </li>
+          <li>
+            <figure>
+              <img
+                src="./images/sq-staff3.png"
+                alt="Николай Тарасов Product Marketing"
+                width="270"
+              />
+              <figcaption>Николай Тарасов</figcaption>
+              <figcaption>Marketing</figcaption>
+            </figure>
+          </li>
+          <li>
+            <figure>
+              <img
+                src="./images/sq-staff4.png"
+                alt="Михаил Ермаков UI Designer"
+                width="270"
+              />
+              <figcaption>Михаил Ермаков</figcaption>
+              <figcaption>UI Designer</figcaption>
+            </figure>
+          </li>
+        </ul>
+      </section>
+    </main>
   </body>
 </html>
