работа над багами

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <header>
       <nav>
         <a href=""> WebStudio </a>
-
         <ul>
           <li><a href="">Студия</a></li>
           <li><a href="">Портфолио</a></li>
@@ -72,13 +71,13 @@
         <h2>Чем мы занимаемся</h2>
         <ul>
           <li>
-            <img src="./images/sq-box 1.png" alt="desktop" width="370" />
+            <img src="./images/sq-box 1.jpg" alt="desktop" width="370" />
           </li>
           <li>
-            <img src="./images/sq-box 2.png" alt="mobile" width="370" />
+            <img src="./images/sq-box 2.jpg" alt="mobile" width="370" />
           </li>
           <li>
-            <img src="./images/sq-box 3.png" alt="tablet" width="370" />
+            <img src="./images/sq-box 3.jpg" alt="tablet" width="370" />
           </li>
         </ul>
       </section>
@@ -89,7 +88,7 @@
           <li>
             <figure>
               <img
-                src="./images/sq-staff1.png"
+                src="./images/sq-staff1.jpg"
                 alt="Игорь Демьяненко Product Designer"
                 width="270"
               />
@@ -100,7 +99,7 @@
           <li>
             <figure>
               <img
-                src="./images/sq-staff2.png"
+                src="./images/sq-staff2.jpg"
                 alt="Ольга Репина Frontend Developer"
                 width="270"
               />
@@ -111,7 +110,7 @@
           <li>
             <figure>
               <img
-                src="./images/sq-staff3.png"
+                src="./images/sq-staff3.jpg"
                 alt="Николай Тарасов Product Marketing"
                 width="270"
               />
@@ -122,7 +121,7 @@
           <li>
             <figure>
               <img
-                src="./images/sq-staff4.png"
+                src="./images/sq-staff4.jpg"
                 alt="Михаил Ермаков UI Designer"
                 width="270"
               />
@@ -133,5 +132,7 @@
         </ul>
       </section>
     </main>
+
+    <footer></footer>
   </body>
 </html>
