--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <section>
           <h1>эффективные решения <br />для вашего бизнеса</h1>
           <form>
-            <button>Заказать услугу..</button>
+            <button>Заказать услугу</button>
           </form>
         </section>
       </div>
@@ -71,13 +71,13 @@
         <h2>Чем мы занимаемся</h2>
         <ul>
           <li>
-            <img src="./images/sq-box 1.jpg" alt="desktop" width="370" />
+            <img src="./images/sq-box1.jpg" alt="desktop" width="370" />
           </li>
           <li>
-            <img src="./images/sq-box 2.jpg" alt="mobile" width="370" />
+            <img src="./images/sq-box2.jpg" alt="mobile" width="370" />
           </li>
           <li>
-            <img src="./images/sq-box 3.jpg" alt="tablet" width="370" />
+            <img src="./images/sq-box3.jpg" alt="tablet" width="370" />
           </li>
         </ul>
       </section>
@@ -92,8 +92,7 @@
                 alt="Игорь Демьяненко Product Designer"
                 width="270"
               />
-              <figcaption>Игорь Демьяненко</figcaption>
-              <figcaption>Product Designer</figcaption>
+              <figcaption>Игорь Демьяненко <br />Product Designer</figcaption>
             </figure>
           </li>
           <li>
@@ -103,8 +102,7 @@
                 alt="Ольга Репина Frontend Developer"
                 width="270"
               />
-              <figcaption>Ольга Репина</figcaption>
-              <figcaption>Frontend Developer</figcaption>
+              <figcaption>Ольга Репина <br />Frontend Developer</figcaption>
             </figure>
           </li>
           <li>
@@ -114,8 +112,7 @@
                 alt="Николай Тарасов Product Marketing"
                 width="270"
               />
-              <figcaption>Николай Тарасов</figcaption>
-              <figcaption>Marketing</figcaption>
+              <figcaption>Николай Тарасов<br />Marketing</figcaption>
             </figure>
           </li>
           <li>
@@ -125,14 +122,23 @@
                 alt="Михаил Ермаков UI Designer"
                 width="270"
               />
-              <figcaption>Михаил Ермаков</figcaption>
-              <figcaption>UI Designer</figcaption>
+              <figcaption>
+                Михаил Ермаков <br />
+                UI Designer
+              </figcaption>
             </figure>
           </li>
         </ul>
       </section>
     </main>
 
-    <footer></footer>
+    <footer>
+      <a href=""> WebStudio </a>
+      <ul>
+        <li><address>г. Киев, пр-т Леси Украинки, 26</address></li>
+        <li><a href="mailto:info@devstudio">info@devstudio</a></li>
+        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      </ul>
+    </footer>
   </body>
 </html>
