--- a/index.html
+++ b/index.html
@@ -86,47 +86,56 @@
         <h2>Наша команда</h2>
         <ul>
           <li>
-            <figure>
-              <img
-                src="./images/sq-staff1.jpg"
-                alt="Игорь Демьяненко Product Designer"
-                width="270"
-              />
-              <figcaption>Игорь Демьяненко <br />Product Designer</figcaption>
-            </figure>
+            <ul>
+              <li>
+                <img
+                  src="./images/sq-staff1.jpg"
+                  alt="Игорь Демьяненко Product Designer"
+                  width="270"
+                />
+              </li>
+              <li><h3>Игорь Демьяненко</h3></li>
+              <li><p>Product Designer</p></li>
+            </ul>
           </li>
           <li>
-            <figure>
-              <img
-                src="./images/sq-staff2.jpg"
-                alt="Ольга Репина Frontend Developer"
-                width="270"
-              />
-              <figcaption>Ольга Репина <br />Frontend Developer</figcaption>
-            </figure>
+            <ul>
+              <li>
+                <img
+                  src="./images/sq-staff2.jpg"
+                  alt="Ольга Репина Frontend Developer"
+                  width="270"
+                />
+              </li>
+              <li><h3>Ольга Репина</h3></li>
+              <li><p>Frontend Developer</p></li>
+            </ul>
           </li>
           <li>
-            <figure>
-              <img
-                src="./images/sq-staff3.jpg"
-                alt="Николай Тарасов Product Marketing"
-                width="270"
-              />
-              <figcaption>Николай Тарасов<br />Marketing</figcaption>
-            </figure>
+            <ul>
+              <li>
+                <img
+                  src="./images/sq-staff3.jpg"
+                  alt="Николай Тарасов Product Marketing"
+                  width="270"
+                />
+              </li>
+              <li><h3>Николай Тарасов</h3></li>
+              <li><p>Product Marketing</p></li>
+            </ul>
           </li>
           <li>
-            <figure>
-              <img
-                src="./images/sq-staff4.jpg"
-                alt="Михаил Ермаков UI Designer"
-                width="270"
-              />
-              <figcaption>
-                Михаил Ермаков <br />
-                UI Designer
-              </figcaption>
-            </figure>
+            <ul>
+              <li>
+                <img
+                  src="./images/sq-staff4.jpg"
+                  alt="Михаил Ермаков UI Designer"
+                  width="270"
+                />
+              </li>
+              <li><h3>Михаил Ермаков</h3></li>
+              <li><p>UI Designer</p></li>
+            </ul>
           </li>
         </ul>
       </section>
