корректировка разметки HTML

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>WebStudio</title>
   </head>
   <body>
     <header>
@@ -86,56 +86,48 @@
         <h2>Наша команда</h2>
         <ul>
           <li>
-            <ul>
-              <li>
-                <img
-                  src="./images/sq-staff1.jpg"
-                  alt="Игорь Демьяненко Product Designer"
-                  width="270"
-                />
-              </li>
-              <li><h3>Игорь Демьяненко</h3></li>
-              <li><p>Product Designer</p></li>
-            </ul>
+            <img
+              src="./images/sq-staff1.jpg"
+              alt="Игорь Демьяненко Product Designer"
+              width="270"
+            />
+            <div>
+              <h3>Игорь Демьяненко</h3>
+              <p>Product Designer</p>
+            </div>
           </li>
           <li>
-            <ul>
-              <li>
-                <img
-                  src="./images/sq-staff2.jpg"
-                  alt="Ольга Репина Frontend Developer"
-                  width="270"
-                />
-              </li>
-              <li><h3>Ольга Репина</h3></li>
-              <li><p>Frontend Developer</p></li>
-            </ul>
+            <img
+              src="./images/sq-staff2.jpg"
+              alt="Ольга Репина Frontend Developer"
+              width="270"
+            />
+            <div>
+              <h3>Ольга Репина</h3>
+              <p>Frontend Developer</p>
+            </div>
           </li>
           <li>
-            <ul>
-              <li>
-                <img
-                  src="./images/sq-staff3.jpg"
-                  alt="Николай Тарасов Product Marketing"
-                  width="270"
-                />
-              </li>
-              <li><h3>Николай Тарасов</h3></li>
-              <li><p>Product Marketing</p></li>
-            </ul>
+            <img
+              src="./images/sq-staff3.jpg"
+              alt="Николай Тарасов Product Marketing"
+              width="270"
+            />
+            <div>
+              <h3>Николай Тарасов</h3>
+              <p>Product Marketing</p>
+            </div>
           </li>
           <li>
-            <ul>
-              <li>
-                <img
-                  src="./images/sq-staff4.jpg"
-                  alt="Михаил Ермаков UI Designer"
-                  width="270"
-                />
-              </li>
-              <li><h3>Михаил Ермаков</h3></li>
-              <li><p>UI Designer</p></li>
-            </ul>
+            <img
+              src="./images/sq-staff4.jpg"
+              alt="Михаил Ермаков UI Designer"
+              width="270"
+            />
+            <div>
+              <h3>Михаил Ермаков</h3>
+              <p>UI Designer</p>
+            </div>
           </li>
         </ul>
       </section>
